# avWare

./: .gitignore  CMakeConfig.cmake  CMakeLists.txt  README.md  config.h.in
App/: CMakeLists.txt  CPack.CMake  CheckHeadLibsFiles.CMake
App/Includes/: CAvObject.h  CObject.h  Queue.h  Signal_s.h  Signals.h
App/Includes/Apis/: AvEnum.h  AvEnuminline.h  AvSystemStruct.h  AvWareCplusplus.h  AvWareLibDef.h  AvWareStruct.h  AvWareType.h  LibCommon.h  LibDecode.h  LibEncode.h  LibIntelligent.h  LibLocalAlm.h  LibOutput.h  LibRingBuffer.h  LibSystem.h  LibWindows.h
App/Includes/AvAlarm/: AvAlarm.h  AvAlarmLocal.h  AvalarmLocal.h
App/Includes/AvAudio/: AvAudio.h
App/Includes/AvCapture/: AvCapture.h  AvDevCapture.h  AvManCapture.h  AvNetCapture.h
App/Includes/AvConfigs/: AvConfigAlarm.h  AvConfigCapture.h  AvConfigDevice.h  AvConfigIndex.h  AvConfigManager.h  AvConfigManagerBase.h  AvConfigManagerGeneral.h  AvConfigManagerNetCapture.h  AvConfigManagerNetWork.h  AvConfigNetService.h  AvConfigRecord.h  AvConfigTable.h  AvConfigUserManager.h
App/Includes/AvDecode/: AvDecode.h
App/Includes/AvDevice/: AvDevice.h
App/Includes/AvExternInterface/: AvExternInterface.h
App/Includes/AvF/: AvF.h
App/Includes/AvFile/: AvFile.h
App/Includes/AvGui/: AvGui.h
App/Includes/AvIntelligentAnalysis/: AvFaceDetectManager.h  AvIntelligentAnalysis.h
App/Includes/AvLog/: AvLog.h
App/Includes/AvLua/: AvLua.h
App/Includes/AvMemoryPool/: AvMemoryPool.h
App/Includes/AvNetService/: AvDdns.h  AvDdnsCli.h  AvDhcp.h  AvFtp.h  AvHttpSearch.h  AvNetService.h  AvNtp.h  AvNtpCli.h  AvOnvif.h  AvOnvifClient.h  AvProtoMoon.h  AvRtmp.h  AvRtsp.h  AvSmtp.h  AvUpnp.h  AvUpnpCli.h  AvWeb.h  AvWebProcess.h  CSmtpExport.h
App/Includes/AvPacket/: AvPacket.h
App/Includes/AvPreview/: AvPreview.h
App/Includes/AvProc/: AvProc.h  logAvWareExport.h
App/Includes/AvProtocol/: AvNetProto.h
App/Includes/AvRecord/: AvRecord.h  AvRecordCom.h  AvRecordDB.h
App/Includes/AvThread/: AvQmsg.h  AvQueue.h  AvTask.h  AvThread.h  AvThreadPool.h  AvTimer.h
App/Includes/AvUart/: AvUart.h
App/Includes/AvUser/: AvUser.h
App/Includes/AvWatchDog/: AvWatchDog.h
App/Lib/: CMakeLists.txt
App/Lib/Common/: arp.cpp  arp.h  base64.cpp  gtkutf8.c  icmp.cpp  icmp.h  zconf.h
App/Lib/Common/JsonCppSrc/: json_value.cpp  json_writer.cpp
App/Lib/Common/openssl/: opensslconf.h
App/Lib/Ddns/: Ddns_Enable.c  Ddns_Global.h  Ddns_Net.c  Ddns_Net.h  NetDdns.h
App/Lib/Dhcp/: dhcp.c  dhcp.h
App/Lib/Ftp/: Ftp.cpp  Ftp.h
App/Lib/MemPool/: CMemoryPool.cpp  CMemoryPool.h  IMemoryBlock.h  SMemoryChunk.h
App/Lib/NormTools/: base64.h  md5.h
App/Lib/NormTools/JsonCppSrc/: json_reader.cpp  version.h.in
App/Lib/Onvif/: alarm.h  common.h  group.h  list.h  network.h  onvifAPI.h  onvifinit.h  profile.h  userdefine.h  usrmem.h  xml.h
App/Lib/Rtmp/: amf.h  handshake.h  log.h  rtmp.h  rtmp_sys.h
App/Lib/Rtsp/: Http.h  LibRtspClient.h  LibRtspServer.h  RSock.h  RTCP.h  RTP.h  Rbuffer.h  Rtsp.h  RtspMedia.h  Session.h  decSps.h
App/Lib/Smtp/: CSmtp.cpp  CSmtp.h
App/Lib/Sqlite/: sqlite3.h
App/Lib/Upnp/: bsdqueue.h  codelength.h  connecthostport.c  connecthostport.h  declspec.h  igd_desc_parse.c  igd_desc_parse.h  minisoap.c  minisoap.h  minissdpc.c  minissdpc.h  miniupnpc.c  miniupnpc.h  miniupnpcstrings.h  miniupnpctypes.h  miniwget.c  miniwget.h  minixml.c  minixml.h  portlistingparse.c  portlistingparse.h  receivedata.c  receivedata.h  upnpcommands.c  upnpcommands.h  upnperrors.c  upnperrors.h  upnplib.c  upnplib.h  upnpreplyparse.c  upnpreplyparse.h
App/Lib/WebService/: LibWebService.h  WebHttpTask.h  dirent.h
App/Lib/uv/src/: threadpool.c
App/Lib/uvPlusPlus/: libuvCpp.h
App/MainSrc/: main.cpp  main.rc  resource.h
App/Modules/: CMakeLists.txt
App/Modules/AvAlarm/: AvAlarm.cpp  AvAlarmLocal.cpp  AvalarmLocal.cpp
App/Modules/AvAudio/: AvAudioCapture.cpp  AvAudioPlay.cpp
App/Modules/AvCapture/: AvCapture.cpp  AvDevCapture.cpp  AvManCapture.cpp  AvNetCapture.cpp
App/Modules/AvConfigs/: AvConfigAlarm.cpp  AvConfigCapture.cpp  AvConfigDevice.cpp  AvConfigManager.cpp  AvConfigManagerBase.cpp  AvConfigManagerGeneral.cpp  AvConfigManagerNetCapture.cpp  AvConfigManagerNetWork.cpp  AvConfigManagerUser.cpp  AvConfigNetService.cpp  AvConfigRecord.cpp  AvConfigTable.cpp  AvConfigUserManager.cpp
App/Modules/AvDecode/: AvDecode.cpp
App/Modules/AvDevice/: AvDevice.cpp
App/Modules/AvExternInterface/: AvExternInterface.cpp
App/Modules/AvExternInterface/AvExternInterfaceTest/: AvExternInterfaceTest.cpp  AvExternInterfaceTest.h
App/Modules/AvExternInterface/AvMoon/: AvMoon.cpp  AvMoon.h
App/Modules/AvF/: AvF.cpp
App/Modules/AvFile/: AvFile.cpp
App/Modules/AvGui/: AvGui.cpp  AvGuiSystem.h  CMakeLists.txt  Zh_Cn.ts  en_US.ts  zh_CN.ts
App/Modules/AvGui/AvForm/: dlgabout.cpp  dlgabout.h  dlgabout.ui  dlgalarmmessage.cpp  dlgalarmmessage.h  dlgalarmmessage.ui  dlgareaselect.cpp  dlgareaselect.h  dlgareaselect.ui  dlgdeviceset.cpp  dlgdeviceset.h  dlgdeviceset.ui  dlgfactoryset.cpp  dlgfactoryset.h  dlgfactoryset.ui  dlghandadddevice.cpp  dlghandadddevice.h  dlghandadddevice.ui  dlgnetset.cpp  dlgnetset.h  dlgnetset.ui  dlgoverlay.cpp  dlgoverlay.h  dlgoverlay.ui  dlgptzwindows.cpp  dlgptzwindows.h  dlgptzwindows.ui  dlgrecordset.cpp  dlgrecordset.h  dlgrecordset.ui  dlgsnapshot.cpp  dlgsnapshot.h  dlgsnapshot.ui  dlgtimeselect.cpp  dlgtimeselect.h  dlgtimeselect.ui  dlgupgrade.cpp  dlgupgrade.h  dlgupgrade.ui  formptzadvanced.cpp  (+32 more)
App/Modules/AvGui/AvResource/: avWare.qrc
App/Modules/AvGui/AvSource/: AvGuiApplication.cpp  AvGuiApplication.h  Layout.h  (+13 more)
App/Modules/AvIntelligentAnalysis/: AvIntelligentAnalysis.cpp
App/Modules/AvLog/: AvLog.cpp
App/Modules/AvMemoryPool/: AvMemoryPool.cpp
App/Modules/AvNetService/: AvNetService.cpp
App/Modules/AvPacket/: AvPacket.cpp
App/Modules/AvPreview/: AvPreview.cpp
App/Modules/AvProc/: AvProc.cpp
App/Modules/AvRecord/: AvRecord.cpp  AvRecordDB.cpp
App/Modules/AvUart/: AvUart.cpp
App/Modules/AvUser/: AvUser.cpp
App/Modules/AvWatchDog/: AvWatchDog.cpp
(+67 files in other folders)
